# MasVisGtk

./: README.md  io.github.itprojects.MasVisGtk.json  meson.build
MasVisGtkPlugin/: MasVisGtkPlugin.jucer
MasVisGtkPlugin/Source/: DynamicRangeByChannel.h  DynamicRangeChart.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TableComponent.h  TableModel.h
data/: io.github.itprojects.MasVisGtk.desktop.in  io.github.itprojects.MasVisGtk.gschema.xml  io.github.itprojects.MasVisGtk.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  be_BY.po  bg_BG.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_CA.po  en_GB.po  en_US.po  es_ES.po  et_EE.po  fa_IR.po  fi_FI.po  fr_FR.po  he_IL.po  hi_IN.po  hr_HR.po  hu_HU.po  is_IS.po  it_IT.po  ja_JP.po  ka_GE.po  kk_KZ.po  ko_KR.po  lt_LT.po  lv_LV.po  masvisgtk.pot  meson.build  nb_NO.po  ne_NP.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sk_SK.po  sl_SI.po  (+7 more)
src/: __init__.py  analysis.py  async_render.py  input.py  main.py  main_gtk_window.py  main_original.py  masvisgtk.gresource.xml  masvisgtk.in  meson.build  output.py  output_gtk.py  params.py  utils.py
src/gtk/: help-overlay.ui  manual-overlay.ui  preferences-overlay.ui  style.css
